--- a/sprawozdanie.lyx
+++ b/sprawozdanie.lyx
@@ -72,6 +72,26 @@ Algorytm genetyczny w szeregowaniu zadań.
 Kamil Piotrowski 122491, Michał Lewiński 122505
 \end_layout
 
+\begin_layout Date
+10.01.2015r.
+\end_layout
+
+\begin_layout Abstract
+
+\size normal
+Niniejsze sprawozdanie dotyczy problemu nr 3 (job shop, liczba maszyn m=2,
+ operacje typu non-preemptive, dla pierwszej maszyny od k=2 do n/2 okresów
+ przestoju o losowym czasie rozpoczęcia i trwania, różne i losowe czasy
+ gotowości dla wszystkich zadań minimalizacja sumy czasów zakończenia wszystkich
+ operacji, liczba zadań n.).
+ Pierwszy rozdział zawiera teoreryczny opis działania i implementacji naszego
+ algorytmu.
+ W drugim rozdziale znajdują się testy dotyczące strojenia heurystyki, pa
+ podstawie których wybierzeby najoptymalniejsze ustawienia.
+ W 3 rozdziale znajdują się testy instancji.
+ 
+\end_layout
+
 \begin_layout Section
 Wstęp
 \end_layout
@@ -318,7 +338,7 @@ PP
 \begin_inset Text
 
 \begin_layout Plain Layout
-ilość przerw konserwujących [% z N]
+ilość przerw konserwujących [(% z N)+2]
 \end_layout
 
 \end_inset
@@ -1055,7 +1075,14 @@ reference "parametr3.3"
 
 \end_inset
 
-, natomiast zależność na wykresie X.
+, natomiast zależność na wykresie 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "wykres_3.3"
+
+\end_inset
+
+.
  Z wykresu możemy odczytać, że wartość funkcji celu jest proporcjonalna
  do maksymalnego czasu gotowości (zalezność liniowa).
  Prowadzą prostą przez punkty pomiarowe dochodzimy do następującego równania
@@ -1287,6 +1314,13 @@ status open
 \end_inset
 
 
+\begin_inset CommandInset label
+LatexCommand label
+name "wykres_3.3"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Plain Layout
@@ -1314,6 +1348,274 @@ zależność funkcji celu od czasu gotowości zadania
 Ilość przerw konserwujących
 \end_layout
 
+\begin_layout Standard
+Celem rozdziału jest zbadanie jak ilość przerw konserwujących wpływa na
+ wartość funkcji celu.
+ Wartości parametrów zostały przedstawione w tabeli 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "param3.4"
+
+\end_inset
+
+, natomiast zalezność na wykresie 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "wykres3_4"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\paragraph_spacing onehalf
+\align center
+\begin_inset Tabular
+<lyxtabular version="3" rows="2" columns="8">
+<features tabularvalignment="middle">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<row>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+parametr
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+minZ
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+maxZ
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+N
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+maxG
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+PP
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+minP
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+maxP
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+wartość
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+1
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+5
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+50
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+100
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+0-90%
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+1
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+50
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+wartości parametrów dla testu 3.4
+\end_layout
+
+\end_inset
+
+
+\begin_inset CommandInset label
+LatexCommand label
+name "param3.4"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename wykresy/wykres3_4.png
+	width 70page%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+zależność funkcji celu od ilości przerw konserwujących
+\end_layout
+
+\end_inset
+
+
+\begin_inset CommandInset label
+LatexCommand label
+name "wykres3_4"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Czas trwania przerw konserwujących
 \end_layout
@@ -1324,11 +1626,12 @@ Opis zależności
 
 \begin_layout Standard
 Celem tego rozdziału jest podsumowanie zależności otrzymanych w rozdziałach
- 3.1 - 3.5, oraz próba wyprowadzenia wspólnej zalezności dla wszystkich testów.
- Uznajmy test 3.2 za podstawowy, od którego zaczynamy.
+ 3.1 - 3.5, oraz próba wyprowadzenia wspólnej, teoretycznej zalezności dla
+ wszystkich testów.
+ Uznajmy test 3.1 za podstawowy, od którego zaczynamy.
  Najpierw postaramy się go uogólnić na ilość zadań.
  W teście 3.2 wyznaczyliśmy zależność kwadratową.
- Starając się ugogólnić zależność (
+ Starając się uogólnić zależność (
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:3_1"
@@ -1383,16 +1686,27 @@ F_{7}=F_{6}+[(PP-20)/20*7760]+[(maxG-100)/100*900]
 
 \end_inset
 
-Wszytkie te rozważania były by poprawne, gdyby testowane parametry nie wpływały
- na siebie nawzajem.
+Stałe wykorzystane w powyższem wzorze zostały odczytane z wykresów (
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "wykres_3.3"
+
+\end_inset
+
+, 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "wykres3_4"
+
+\end_inset
+
+).
+ Wszytkie te rozważania były by poprawne, gdyby testowane parametry nie
+ wpływały na siebie nawzajem.
  Tak niestety nie jest, dlatego możemy się spodziewać pewnych różnić między
  wartością wyliczoną ze wzoru, a zwróconą przez program.
  W celu weryfikacji porównamy te wartości i wyznaczymy wzglądną róznicę.
  
-\end_layout
-
-\begin_layout Standard
-
 \end_layout
 
 \begin_layout Standard
@@ -1452,6 +1766,8 @@ program
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 \begin_inset Formula $F_{7}$
 \end_inset
 
@@ -1464,6 +1780,8 @@ program
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 \begin_inset Formula $F_{6}$
 \end_inset
 
@@ -1476,6 +1794,8 @@ program
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 \begin_inset Formula $F_{1}$
 \end_inset
 
@@ -1488,6 +1808,8 @@ program
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 minZ
 \end_layout
 
@@ -1497,6 +1819,8 @@ minZ
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 maxZ
 \end_layout
 
@@ -1506,6 +1830,8 @@ maxZ
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 maxG
 \end_layout
 
@@ -1515,6 +1841,8 @@ maxG
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 PP
 \end_layout
 
@@ -1524,6 +1852,8 @@ PP
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 N
 \end_layout
 
@@ -1533,6 +1863,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 \begin_inset Formula $y_{2}$
 \end_inset
 
@@ -1545,6 +1877,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 \begin_inset Formula $y_{1}$
 \end_inset
 
@@ -1587,6 +1921,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+135931
 \end_layout
 
 \end_inset
@@ -1596,6 +1932,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+106296
 \end_layout
 
 \end_inset
@@ -1605,6 +1943,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+32807
 \end_layout
 
 \end_inset
@@ -1613,6 +1953,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 1
 \end_layout
 
@@ -1622,6 +1964,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 51
 \end_layout
 
@@ -1631,6 +1975,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 375
 \end_layout
 
@@ -1640,6 +1986,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 90
 \end_layout
 
@@ -1649,6 +1997,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 90
 \end_layout
 
@@ -1658,6 +2008,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 79431
 \end_layout
 
@@ -1667,6 +2019,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 31875
 \end_layout
 
@@ -1706,6 +2060,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+160255
 \end_layout
 
 \end_inset
@@ -1715,6 +2071,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+133437
 \end_layout
 
 \end_inset
@@ -1724,6 +2082,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+48424
 \end_layout
 
 \end_inset
@@ -1732,6 +2092,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 6
 \end_layout
 
@@ -1741,6 +2103,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 72
 \end_layout
 
@@ -1750,6 +2114,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 450
 \end_layout
 
@@ -1759,6 +2125,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 81
 \end_layout
 
@@ -1768,6 +2136,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 83
 \end_layout
 
@@ -1777,6 +2147,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 109650
 \end_layout
 
@@ -1786,6 +2158,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 42858
 \end_layout
 
@@ -1825,6 +2199,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+184727
 \end_layout
 
 \end_inset
@@ -1834,6 +2210,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+160726
 \end_layout
 
 \end_inset
@@ -1843,6 +2221,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+69566
 \end_layout
 
 \end_inset
@@ -1851,6 +2231,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 17
 \end_layout
 
@@ -1860,6 +2242,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 93
 \end_layout
 
@@ -1869,6 +2253,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 525
 \end_layout
 
@@ -1878,6 +2264,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 72
 \end_layout
 
@@ -1887,6 +2275,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 76
 \end_layout
 
@@ -1896,6 +2286,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 139869
 \end_layout
 
@@ -1905,6 +2297,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 53841
 \end_layout
 
@@ -1944,6 +2338,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+193871
 \end_layout
 
 \end_inset
@@ -1953,6 +2349,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+172687
 \end_layout
 
 \end_inset
@@ -1962,6 +2360,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+90678
 \end_layout
 
 \end_inset
@@ -1970,6 +2370,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 28
 \end_layout
 
@@ -1979,6 +2381,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 114
 \end_layout
 
@@ -1988,6 +2392,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 600
 \end_layout
 
@@ -1997,6 +2403,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 63
 \end_layout
 
@@ -2006,6 +2414,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 69
 \end_layout
 
@@ -2015,6 +2425,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 170088
 \end_layout
 
@@ -2024,6 +2436,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 64824
 \end_layout
 
@@ -2063,6 +2477,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+190230
 \end_layout
 
 \end_inset
@@ -2072,6 +2488,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+171863
 \end_layout
 
 \end_inset
@@ -2081,6 +2499,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+111773
 \end_layout
 
 \end_inset
@@ -2089,6 +2509,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 39
 \end_layout
 
@@ -2098,6 +2520,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 135
 \end_layout
 
@@ -2107,6 +2531,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 675
 \end_layout
 
@@ -2116,6 +2542,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 54
 \end_layout
 
@@ -2125,6 +2553,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 62
 \end_layout
 
@@ -2134,6 +2564,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 200307
 \end_layout
 
@@ -2143,6 +2575,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 75807
 \end_layout
 
@@ -2182,6 +2616,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+176309
 \end_layout
 
 \end_inset
@@ -2191,6 +2627,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+160759
 \end_layout
 
 \end_inset
@@ -2200,6 +2638,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+132859
 \end_layout
 
 \end_inset
@@ -2208,6 +2648,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 50
 \end_layout
 
@@ -2217,6 +2659,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 156
 \end_layout
 
@@ -2226,6 +2670,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 750
 \end_layout
 
@@ -2235,6 +2681,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 45
 \end_layout
 
@@ -2244,6 +2692,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 55
 \end_layout
 
@@ -2253,6 +2703,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 230526
 \end_layout
 
@@ -2262,6 +2714,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 86790
 \end_layout
 
@@ -2301,6 +2755,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+154602
 \end_layout
 
 \end_inset
@@ -2310,6 +2766,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+141869
 \end_layout
 
 \end_inset
@@ -2319,6 +2777,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+153938
 \end_layout
 
 \end_inset
@@ -2327,6 +2787,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 61
 \end_layout
 
@@ -2336,6 +2798,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 177
 \end_layout
 
@@ -2345,6 +2809,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 825
 \end_layout
 
@@ -2354,6 +2820,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 36
 \end_layout
 
@@ -2363,6 +2831,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 48
 \end_layout
 
@@ -2372,6 +2842,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 260745
 \end_layout
 
@@ -2381,6 +2853,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 97773
 \end_layout
 
@@ -2420,6 +2894,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+127595
 \end_layout
 
 \end_inset
@@ -2429,6 +2905,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+117679
 \end_layout
 
 \end_inset
@@ -2438,6 +2916,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+175013
 \end_layout
 
 \end_inset
@@ -2446,6 +2926,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 72
 \end_layout
 
@@ -2455,6 +2937,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 198
 \end_layout
 
@@ -2464,6 +2948,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 900
 \end_layout
 
@@ -2473,6 +2959,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 27
 \end_layout
 
@@ -2482,6 +2970,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 41
 \end_layout
 
@@ -2491,6 +2981,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 290964
 \end_layout
 
@@ -2500,6 +2992,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 108756
 \end_layout
 
@@ -2539,6 +3033,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+97768
 \end_layout
 
 \end_inset
@@ -2548,6 +3044,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+90669
 \end_layout
 
 \end_inset
@@ -2557,6 +3055,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+196085
 \end_layout
 
 \end_inset
@@ -2565,6 +3065,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 83
 \end_layout
 
@@ -2574,6 +3076,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 219
 \end_layout
 
@@ -2583,6 +3087,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 975
 \end_layout
 
@@ -2592,6 +3098,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 18
 \end_layout
 
@@ -2601,6 +3109,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 34
 \end_layout
 
@@ -2610,6 +3120,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 321183
 \end_layout
 
@@ -2619,6 +3131,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 119739
 \end_layout
 
@@ -2658,6 +3172,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+68380
 \end_layout
 
 \end_inset
@@ -2667,6 +3183,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+63322
 \end_layout
 
 \end_inset
@@ -2676,6 +3194,8 @@ N
 
 \begin_layout Plain Layout
 
+\size footnotesize
+217155
 \end_layout
 
 \end_inset
@@ -2684,6 +3204,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 94
 \end_layout
 
@@ -2693,6 +3215,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 240
 \end_layout
 
@@ -2702,6 +3226,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 1050
 \end_layout
 
@@ -2711,6 +3237,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 11
 \end_layout
 
@@ -2720,6 +3248,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 27
 \end_layout
 
@@ -2729,6 +3259,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 351402
 \end_layout
 
@@ -2738,6 +3270,8 @@ N
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 130722
 \end_layout
 
